--- a/allifmaalcommonapp/templates/allifmaalcommonapp/assets/add-asset.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/assets/add-asset.html
@@ -6,133 +6,214 @@
 {% block style %}
 {%endblock%}
 {% block body %}
+<div class="allifmaal-main-container">
+ 
 <!--start....main headere-->
 <div class="card-header">
 
-  <div class="row mt-12" ><!--start....header row-->
-  
-  <div class="col-md-12"><!--start....header column-->
-  
-  <div class="container-fluid amel-content-header">
-    <div class="dropdown allifmaal-content-dropdown">
-      <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Open Filters
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <div class="content-dropdown-menu">
-  
-        <li><a class="dropdown-item">Looking for something?</a></li>
-        <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonClasses' user_var glblslug %}">Clear Search</a></li>
-       
-        <form method='POST' action="{% url 'allifmaalcommonapp:commonAssetSearch' user_var glblslug %}">{% csrf_token %}
-        
-          <input type="text" id="allifsearchcommonfield" name="allifsearchcommonfieldname" class="form-control allifsearchcommonfieldclasstwo"
-          placeholder="Type Here ...">
-        
-          <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-          </form>
-        
-      
-      </div>
-      </ul>
-    </div>
-    <a class="amel-table-list-identifier">Asset Categories:</a>
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+<div class="row mt-12" ><!--start....header row-->
 
-    <a href="{% url 'allifmaalcommonapp:commonAssetCategories' user_var glblslug %}">Asset Categories</a>
-    <a href="{% url 'allifmaalcommonapp:commonAssets' user_var glblslug %}">Assets</a>
-    <a href="{% url 'allifmaalcommonapp:commonAddAsset' user_var glblslug %}">Add New</a>
+<div class="col-md-12"><!--start....header column-->
+
+<div class="container-fluid amel-content-header">
+
+  <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+  <a href="{% url 'allifmaalcommonapp:commonAssets' user_var glblslug %}">Assets</a>
+ 
+</div>
+
+    </div><!--end....header column-->
+  
+  </div><!--end....header row-->
+
+</div><!--end....main headere-->
 
 
-  <div class="dropdown allifmaal-content-dropdown">
-    <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-    Modules
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <div class="content-dropdown-menu">
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}" >Employees</a></li>
-     
-    </div>
-    </ul>
-  </div>
-  <a href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a>
-  </div>
-  
-      </div><!--end....header column-->
+  <div class="allifmaincontainer">
+
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">Add/Edit New Asset</div>
+  <form method='POST' action=''>{% csrf_token %}
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
     
-    </div><!--end....header row-->
-  
-  </div><!--end....main headere-->
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+       
+      <tr>
+        <td class="allif-fix-table-col">Division</td>
+        <td>{{form.division}}</td>
+    
+        </tr>
+        
+        <tr>
+          <td class="allif-fix-table-col">Branch</td>
+          <td>{{form.branch}}</td>
+      
+          </tr>
+        
+          <tr>
+            <td class="allif-fix-table-col">Department</td>
+            <td>{{form.department}}</td>
+        
+            </tr>
 
-<div class="allifmaincontainer">
-
-  <div class="row mt-12"> <!--start....table row-->
-    <div class="col-md-12"><!--start of the first row body-->
-        <div class="allif-form-container">
-        <form method='POST' action=''>{% csrf_token %}
-        <div class="row"><!--start of row div --->
-          <div class="col-md-4"><!--start of column 1-->
-            <div class="card shadow text-left p-3 allif-form-card" >
-              <label>Division Name</label> {{form.division}}
-              <label>Branch Name</label> {{form.branch}}
-              <label>Department</label> {{form.department}}
-            <label>Category</label> {{form.category}}
-           
-            <label>Responsible Employee</label> {{form.employee}}
-            <label>Asset Account</label> {{form.asset_account}}
-            <label>Payment Account</label> {{form.cost_account}}
-            <label>Supplier</label> {{form.supplier}}
-            <label>Asset Status</label> {{form.asset_status}}
-            
+            <tr>
+              <td class="allif-fix-table-col">Category</td>
+              <td>{{form.category}}</td>
           
-          </div>
-            </div><!--end of column 1-->
-        
-            <div class="col-md-4"><!--start of column 2-->
-            <div class="card shadow text-left p-3 allif-form-card">
-              <label>Asset Description</label> {{form.description}}
-              <label>Quantity</label> {{form.quantity}}
-              <label>Value</label> {{form.value}}
-              <label>Deposit</label> {{form.deposit}}
-              <label>Salvage Value</label> {{form.salvage_value}}
-              <label>Life Span </label> {{form.lifespan}}
-              <label>Comments</label> {{form.comments}}
-               
-                </div>
-            </div><!--end of column 2-->
-            <div class="col-md-4"><!--start of column 3-->
-            <div class="card shadow text-left p-3 allif-form-card">
+              </tr>
+              <tr>
+                <td class="allif-fix-table-col">Staff Responsible</td>
+                <td>{{form.employee}}</td>
+            
+                </tr>
+                <tr>
+                  <td class="allif-fix-table-col">Asset A/C</td>
+                  <td>{{form.asset_account}}</td>
               
-              <label>Terms</label> {{form.terms}}
+                  </tr>
+                  <tr>
+                    <td class="allif-fix-table-col">Payment A/C</td>
+                    <td>{{form.cost_account}}</td>
                 
-                <label>Acquired</label> {{form.acquired}}
-                <label>End of Life </label> {{form.expires}}
-                <label>Posting Status</label> {{form.status}}
+                    </tr>
+                    <tr>
+                      <td class="allif-fix-table-col">Supplier</td>
+                      <td>{{form.supplier}}</td>
+                  
+                      </tr>
+                      <tr>
+                        <td class="allif-fix-table-col">Status</td>
+                        <td>{{form.asset_status}}</td>
+                    
+                        </tr>
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+        
+          <tr>
+            <td class="allif-fix-table-col">Description</td>
+            <td>{{form.description}}</td>
+        
+            </tr>
+            <tr>
+              <td class="allif-fix-table-col">Quantity</td>
+              <td>{{form.quantity}}</td>
+          
+              </tr>
+              <tr>
+                <td class="allif-fix-table-col">Value</td>
+                <td>{{form.value}}</td>
+            
+                </tr>
+                <tr>
+                  <td class="allif-fix-table-col">Description</td>
+                  <td>{{form.description}}</td>
+              
+                  </tr>
+                  <tr>
+                    <td class="allif-fix-table-col">Deposit</td>
+                    <td>{{form.deposit}}</td>
+                
+                    </tr>
+                    <tr>
+                      <td class="allif-fix-table-col">Salvage Value</td>
+                      <td>{{form.salvage_value}}</td>
+                  
+                      </tr>
+                      <tr>
+                        <td class="allif-fix-table-col">Lifespan</td>
+                        <td>{{form.lifespan}}</td>
+                    
+                        </tr>
+         
+          </tbody>
+          </table>
+          </div>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+         
+              <tr>
+                <td class="allif-fix-table-col">Comments</td>
+                <td>{{form.comments}}</td>
+            
+                </tr>
+                <tr>
+                  <td class="allif-fix-table-col">Terms</td>
+                  <td>{{form.terms}}</td>
+              
+                  </tr>
+                  <tr>
+                    <td class="allif-fix-table-col">Acquired On</td>
+                    <td>{{form.acquired}}</td>
+                
+                    </tr>
+                    <tr>
+                      <td class="allif-fix-table-col">Expires</td>
+                      <td>{{form.expires}}</td>
+                  
+                      </tr>
+                      <tr>
+                        <td class="allif-fix-table-col">Posting Status</td>
+                        <td>{{form.status}}</td>
+                    
+                        </tr>
+                        <tr>
+                          <td class="allif-fix-table-col">Depreciation Method</td>
+                          <td>{{form.depreciation}}</td>
+                      
+                          </tr>
+            <tr>
+              <td class="allif-fix-table-col">Action</td>
+              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
+          
+              </tr>
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
 
-                <label>Depreciation Method</label> {{form.depreciation}}
-                
-                
-                
-                <br>
-                <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn">
-        
-                </div>
-            </div><!--end of column 1-->
-        
-        </div><!--end of row div --->
-            </form>
-            </div>
-            </div><!--end of first row body-->
 </div><!--end....table row-->
-
+</div>
+</form>
 <!--end of table-->
-
 
 </div><!--end of main container of the page....-->
 
+
+
+
+</div>
+
+</div>
   {% block scripts %}
 
   {% endblock %}
    {% endblock %}
-   
+  
