--- a/allifmaalcommonapp/templates/allifmaalcommonapp/assets/asset-delete-confirm.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/assets/asset-delete-confirm.html
@@ -1,4 +1,3 @@
-
 {% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
 {% load humanize %}
 {% block title %}
@@ -7,7 +6,8 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-
+<div class="allifmaal-main-container">
+ 
 <!--start....main headere-->
 <div class="card-header">
 
@@ -16,13 +16,8 @@
 <div class="col-md-12"><!--start....header column-->
 
 <div class="container-fluid amel-content-header">
-  
   <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-  
-<a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">HRM</a>
-
-<a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a>
-<a href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a>
+<a href="{% url 'allifmaalcommonapp:commonForms' user_var glblslug %}">Forms</a>
 </div>
 
     </div><!--end....header column-->
@@ -31,228 +26,158 @@
 
 </div><!--end....main headere-->
 
+  <div class="allifmaincontainer">
 
-<!--start of main body-->
-<div class="allifmaincontainer">
-    <div class="row mt-12"> <!--start....table row-->
-        <div class="allif-details-container">
-          <div class="row"><!--start of row div --->
-          
-            <!--start of column two-->
-            <div class="col-md-4">
-              <div class="allif-details-card ">
-                <!--start of the table here-->
-              <table class="table allif-details-table table-layout">
-                <tbody>
-              <tr>
-                <td>Category</td>
-                <td>{{allifquery.category}}</td>
-             
-                </tr>
-            
-              <tr>
-                <td>Department</td>
-                <td>{{allifquery.department}}</td>
-            
-                </tr>
-              <tr>
-                <td>Responsible Employee</td>
-                <td>{{allifquery.employee}}</td>
-            
-                </tr>
-                <tr>
-                    <td>Asset Account</td>
-                    <td>{{allifquery.asset_account}}</td>
-                    
-                  </tr>
-                  <tr>
-                    <td>Payment Account</td>
-                    <td>{{allifquery.cost_account}}</td>
-                    
-                  </tr>
-                 
-                
-                  <tr>
-                    <td>Asset Status</td>
-                    <td>{{allifquery.asset_status}}</td>
-                    
-                  </tr>
-              <tr>
-                <td>Supplier</td>
-                <td>{{allifquery.supplier}}</td>
-            
-                </tr>
-                <tr>
-                  <td>Description</td>
-                  <td>{{allifquery.description}}</td>
-            
-                  </tr>
-              </tbody>
-              </table>
-            
-              </div>
-                  </div>
-          
-               
-           <!--start of column two-->
-           <div class="col-md-4">
-            <div class="allif-details-card ">
-              <!--start of the table here-->
-            <table class="table table-layout allif-details-table">
-              <tbody>
+<div class="row mt-12"> <!--start....table row-->
+  <div class="delete-confirmation-header">Do you want to delete {{allifquery}}?</div>
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+      <tr>
+        <td class="allif-fix-table-col">Description</td>
+        <td>{{allifquery.description}}</td>
+    
+        </tr>
+       
+        
+        </tbody>
+        </table>
+      </div>
+        </div>
            
-             
-            <tr>
-              <td>Quantity</td>
-              <td>{{allifquery.quantity|floatformat:2|intcomma}}</td>
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td class="allif-fix-table-col">Department</td>
+            <td>{{allifquery.department}}</td>
         
             </tr>
-            <tr>
-              <td>Unit Value</td>
-              <td>{{allifquery.value|floatformat:2|intcomma}}</td>
-           </tr>
-           <tr>
-            <td>Total Value</td>
-            <td>{{allifquery.asset_total_amount|floatformat:2|intcomma}}</td>
-         </tr>
-         <tr>
-          <td>Deposit</td>
-          <td>{{allifquery.deposit|floatformat:2|intcomma}}</td>
-      
-        </tr>
-        <tr>
-          <td>Salvage Value</td>
-          <td>{{allifquery.salvage_value|floatformat:2|intcomma}}</td>
           
-        </tr>
-        <tr>
-          <td>Created On</td>
-          <td>{{allifquery.date|date:'d/m/Y'}}</td>
-      
-          </tr>
-          <tr>
-            <td>Acquired On</td>
-            <td>{{allifquery.acquired|date:'d/m/Y'}}</td>
-            
-          </tr>
-          <tr>
-            <td>End of Life</td>
-            <td>{{allifquery.expires|date:'d/m/Y'}}</td>
-            
-          </tr>
-            </tbody>
-            </table>
-          
-            </div>
-                </div>
-          
-          
-           <!--start of column two-->
-           <div class="col-md-4">
-            <div class="allif-details-card ">
-              <!--start of the table here-->
-            <table class="table table-layout allif-details-table">
-              <tbody>
-         
-          <tr>
-            <td>Asset Age (Years)</td>
-            <td>{{allifquery.asset_age}}</td>
         
-          </tr> 
-        <tr>
-          <td>Life Span Comments</td>
-          <td>{{allifquery.lifespan}}</td>
-      
-       </tr>     
-       <tr>
-        <td>Asset Life (Years)</td>
-        <td>{{allifquery.asset_life|floatformat:2|intcomma}}</td>
-    
-     </tr>     
-       
-       <tr>
-        <td>Comments</td>
-        <td>{{allifquery.comments}}</td>
-    
-     </tr>
-     <tr>
-      <td>Created By</td>
-      <td>{{allifquery.owner}}</td>
-      
-    </tr>
-    <tr>
-      <td>Terms</td>
-      <td>{{allifquery.terms}}</td>
-      
-    </tr>
-    <tr>
-      <td>Posting Status</td>
-      <td>{{allifquery.status}}</td>
-      
-    </tr>
-    <tr>
-      <td>Depreciation Method</td>
-      <td>{{allifquery.depreciation}}</td>
-      
-    </tr>
-     
-            </tbody>
-            </table>
-    
-          
+          </tbody>
+          </table>
           </div>
-        </div>
-          
-          </div><!--end of row div --->
-            
-              </div>
-    
-    </div><!--end....table row-->
-<div class="row mt-12"> <!--start....table row-->
-   
-    <div class="allif-details-container">
-      <div class="row"><!--start of row div --->
-      
-        <!--start of column two-->
-        <div class="col-md-4">
-          <div class="delete-options-container">
-            <a href="{% url 'allifmaalcommonapp:commonAssets' user_var glblslug %}">No</a>
           </div>
-              </div>
-      
-           
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="delete-options-container">
-         
-            <a href="{% url 'allifmaalcommonapp:commonAssets' user_var glblslug %}">Back</a>
     
-      
-        </div>
-            </div>
-      
-      
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="delete-options-container-delete">
-           <a href="{% url 'allifmaalcommonapp:commonDeleteAsset' allifquery.id user_var glblslug %}" class="body-delete-link">Yes</a></li>
+
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td class="allif-fix-table-col">Date</td>
+            <td>{{allifquery.date}}</td>
+        
+            </tr>
           
-      </div>
+          </tbody>
+          </table>
+  </div>
     </div>
+    </div><!--end of row div --->
       
-      </div><!--end of row div --->
-        
-          </div>
+        </div>
 
 </div><!--end....table row-->
-
+</div>
 <!--end of table-->
-<hr>
 
+</div><!--end of main container of the page....-->
 
+<div class="row mt-12"> <!--start....table row-->
+  
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+    <tr>
+        <td>
+        <div class="delete-options-container">
+          <a href="{% url 'allifmaalcommonapp:commonAssets' user_var glblslug %}">Back</a>
+        </div>
+        </td>
+      </tr>
+       
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td>
+            <div class="delete-options-container">
+              <a href="{% url 'allifmaalcommonapp:commonAssets' user_var glblslug %}">No</a>
+            </div>
+            </td>
+          </tr>
+           
+         
+          </tbody>
+          </table>
+          </div>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td>
+            <div class="delete-options-container">
+              <a href="{% url 'allifmaalcommonapp:commonDeleteAsset' allifquery.id user_var glblslug %}" class="body-delete-link">Yes</a></li>
+            </div>
+            </td>
+          </tr>
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
+
+</div><!--end....table row-->
+</div>
+<!--end of table-->
+
+</div><!--end of main container of the page....-->
+
+</div>
 </div>
   {% block scripts %}
 
   {% endblock %}
    {% endblock %}
- 
+  
