--- a/allifmaalcommonapp/templates/allifmaalcommonapp/assets/categories.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/assets/categories.html
@@ -6,6 +6,7 @@
 {% block style %}
 {%endblock%}
 {% block body %}
+<div class="allifmaal-main-container">
 <!--start....main headere-->
 <div class="card-header">
 
@@ -41,22 +42,8 @@
 
     <a href="{% url 'allifmaalcommonapp:commonAssetCategories' user_var glblslug %}">Asset Categories</a>
     <a href="{% url 'allifmaalcommonapp:commonAssets' user_var glblslug %}">Assets</a>
-    <a href="{% url 'allifmaalcommonapp:commonAddAssetCategory' user_var glblslug %}">Add New</a>
+    <a href="{% url 'allifmaalcommonapp:commonAddAssetCategory' user_var glblslug %}">Add Asset Category</a>
 
-
-  <div class="dropdown allifmaal-content-dropdown">
-    <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-    Modules
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <div class="content-dropdown-menu">
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}" >Employees</a></li>
-     
-    </div>
-    </ul>
-  </div>
-  <a href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a>
   </div>
   
       </div><!--end....header column-->
@@ -68,76 +55,111 @@
 <div class="allifmaincontainer">
 <div class="row mt-12"> <!--start....table row-->
   <div class="col-md-12"> <!--start....table column-->
+    <div class="allif-scroll-table">
+      <div class="table-responsive allif-full-table">
+      <table class="table table-layout">
+        <thead>
+          <tr class="allif-table-header-row">
+          <td class="allif-fix-table-col">Description</td>
+       
+          <td>Department</td>
+          <td>Created By</td>
+        
+          <td>Date</td>
+        
+          <td>Navigate</td>
+          
+          <td> . . . </td>
+          <td></td>
+          </tr>
+          </thead>
+          <tbody class="allif-table-body">
+           
+          
+          {% for item in allifqueryset %} 
+          <tr data-id="{{item.id}}">
+          <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonAssetCategoryDetails' item.id user_var glblslug %}">{{item.description}}</a></td>
+         
+            <td>
+              {{item.department}}
+             </td>
+             <td>
+              {{item.owner}}
+             </td>
+           
+           <td>
+            {{item.date|date:'d/m/Y'}}
+           </td>
+          
+           <td>
+            <div class="dropdown allifmaal-content-dropdown">
+              <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
+              <div class="dropdown-content">
+                <a href="{% url 'allifmaalcommonapp:commonEditAssetCategory' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+                <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
+                
+              </div>
+            </div>
+            <div class="dropdown allif-confirm-action">
+              
+              <a href="{% url 'allifmaalcommonapp:commonAssetCategories' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
+              <a href="{% url 'allifmaalcommonapp:commonDeleteAssetCategory' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+            </div>
   
-    <div class="allif-scroll-table"> 
-    
-    <table class="table table-layout">
-    <thead>
-      <tr class="allif-table-header-row" >
-      
-      <td>Description</td>
-      <td>Department</td>
-      <td>Created By</td>
-      <td>Comments</td>
-      <td>Date</td>
+           
+          </td>
+         <td> . . . </td>
+         <td></td>
+        
     
       </tr>
-      </thead>
-      <tbody class="allif-table-body">
+      {% endfor %}
+      {% if searched_data %}
+      {% for item in searched_data %}
+      <tr data-id="{{item.id}}">
+        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonAssetCategoryDetails' item.id user_var glblslug %}">{{item.description}}</a></td>
        
-           
-      {% for item in allifqueryset %}   
-      <tr>
-      
-        <td>
-        <a href="{% url 'allifmaalcommonapp:commonAssetCategoryDetails' item.id user_var glblslug %}" class="allif-table-links">
-        {{item.description}}
-        </a></td>
-        <td>
-          {{item.department}}
-         </td>
-         <td>
-          {{item.owner}}
-         </td>
-        <td>
-        {{item.comments}}
-       </td>
-       <td>
-        {{item.date|date:'d/m/Y'}}
-       </td>
-      
-        </tr>
-        {% endfor %}
-
-        {% if searched_data %}
-        {% for item in searched_data %}   
-        <tr>
-      
-          <td>
-          <a href="{% url 'allifmaalcommonapp:commonDepartmentDetails' item.id user_var glblslug %}" class="allif-table-links">
-          {{item.description}}
-          </a></td>
           <td>
             {{item.department}}
            </td>
            <td>
             {{item.owner}}
            </td>
-          <td>
-          {{item.comments}}
-         </td>
+         
          <td>
           {{item.date|date:'d/m/Y'}}
          </td>
         
-          </tr>
-          {% endfor %}
-          {% endif %}
-     
-      </tbody>
-        </table>
-    
+         <td>
+          <div class="dropdown allifmaal-content-dropdown">
+            <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
+            <div class="dropdown-content">
+              <a href="{% url 'allifmaalcommonapp:commonEditAssetCategory' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+              <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
+              
+            </div>
+          </div>
+          <div class="dropdown allif-confirm-action">
+            
+            <a href="{% url 'allifmaalcommonapp:commonAssetCategories' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
+            <a href="{% url 'allifmaalcommonapp:commonDeleteAssetCategory' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+          </div>
+
+         
+        </td>
+       <td> . . . </td>
+       <td></td>
+      
+  
+    </tr>
+      {% endfor %}
+        {%endif %}
+  
+        </tbody>
+      </table>
       </div>
+     </div>
+
       
       </div><!--end....table column-->
   </div>
