--- a/allifmaalcommonapp/templates/allifmaalcommonapp/customers/add-customer.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/customers/add-customer.html
@@ -6,208 +6,176 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-
+<div class="allifmaal-main-container">
+ 
 <!--start....main headere-->
 <div class="card-header">
 
-  <div class="row mt-12" ><!--start....header row-->
-  
-  <div class="col-md-12"><!--start....header column-->
-  
-  <div class="container-fluid amel-content-header">
-    <div class="dropdown allifmaal-content-dropdown">
-      <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Open Filters
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <div class="content-dropdown-menu">
-  
-        <li><a class="dropdown-item">Looking for something?</a></li>
-        <a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonCustomers' user_var glblslug %}">Clear Search</a>
-        
-        <form method='POST' action="{% url 'allifmaalcommonapp:commonCustomerSearch' user_var glblslug %}">{% csrf_token %}
-        
-          <input type="text" id="allifsearchcommonfield" name="allifsearchcommonfieldname" class="form-control allifsearchcommonfieldclasstwo"
-          placeholder="Type Here ...">
-        
-          <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-          </form>
-          <hr>
-          <li><a class="dropdown-item">Select Ordering Option</a></li>
-        <form method='POST' action="{% url 'allifmaalcommonapp:commonCustomers' user_var glblslug %}" enctype="multipart/form-data">{% csrf_token %}
-      
-        <div>
-        <select name="requiredformat" class="form-control">
-          {% for item in datasorts %}
-          <option>{{item.name}}</option>
-            
-           {% endfor %}
-           
-          </select>
-          </div>
-          <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-      
-      </form>
-      <hr>
-      <li><a class="dropdown-item">Advanced Searching</a></li>
-      <form method='POST' action="{% url 'allifmaalcommonapp:commonCustomerAdvanceSearch' user_var glblslug %}" enctype="multipart/form-data">{% csrf_token %}
-        
-        <div>
-          <label>Start Date</label>
-          <input type="date" class="form-control" name="startdate" placeholder="Starting Balance">
-        </div>
-        <div>
-          <label>End Date</label>
-          <input type="date" class="form-control" name="enddate" placeholder="Ending Balance">
-        </div>
+<div class="row mt-12" ><!--start....header row-->
 
-        <div>
-          <label>Start Value</label>
-          <input type="text" class="form-control" name="startvalue" placeholder="">
-        </div>
-        <div>
-          <label>End Value</label>
-          <input type="text" class="form-control" name="endvalue" placeholder="">
-        </div>
-        
-        
-        <div>
-          <label >Select Option</label>
-          <select name="requiredformat" class="form-control">
-            {% for item in formats %}
-            <option>{{item.name}}</option>
-            
-         {% endfor %}
-         
-        </select>
-        </div>
+<div class="col-md-12"><!--start....header column-->
+
+<div class="container-fluid amel-content-header">
+
+  <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+ 
+  <a href="{% url 'allifmaalcommonapp:commonCustomers' user_var glblslug %}">Customers</a>
   
-        
-        <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-    
-    </form>
-    <hr>
-      
-      </div>
-      </ul>
-    </div>
-    <a class="amel-table-list-identifier">Customers:</a>
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-    
-    {% if sctr == 'Education' %}
-  <a href="{% url 'allifmaalcommonapp:commonAddCustomer' user_var glblslug %}" class="module-menu-links">New Student </a>
-  {% elif sctr == 'Healthcare' %}
-  <a href="{% url 'allifmaalcommonapp:commonAddCustomer' user_var glblslug %}" class="module-menu-links">New Patient</a>
-               
-  {% else %}
-  <a href="{% url 'allifmaalcommonapp:commonAddCustomer' user_var glblslug %}" class="module-menu-links">New Customer </a>
-  {% endif %}
+  <a href="{% url 'allifmaalcommonapp:commonAddCustomer' user_var glblslug %}">New Customer</a>
    
-  {% if sctr == 'Education' %}
-  <a href="{% url 'allifmaalcommonapp:commonCustomers' user_var glblslug %}" class="module-menu-links">Students</a>
-  
-  {% elif sctr == 'Healthcare' %}
-  <a href="{% url 'allifmaalcommonapp:commonCustomers' user_var glblslug %}" class="module-menu-links">Patients</a>
- 
-  {% else %}
-  <a href="{% url 'allifmaalcommonapp:commonCustomers' user_var glblslug %}" class="module-menu-links">Customers</a>
-  
-  {% endif %}
-    <a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" class="module-menu-links">Suppliers</a>
     
- 
-  <div class="dropdown allifmaal-content-dropdown">
-    <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-    Modules
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <div class="content-dropdown-menu">
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}" >Employees</a></li>
-     
-    </div>
-    </ul>
-  </div>
-  <a href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a>
-  </div>
-  
-      </div><!--end....header column-->
-    
-    </div><!--end....header row-->
-  
-  </div><!--end....main headere-->
-<div class="allifmaincontainer">
+</div>
 
+    </div><!--end....header column-->
+  
+  </div><!--end....header row-->
+
+</div><!--end....main headere-->
+
+
+  <div class="allifmaincontainer">
+
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">Add/Edit New Customer</div>
+  <form method='POST' action=''>{% csrf_token %}
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
     
-  <div class="row mt-12"> <!--start....table row-->
-    <div class="col-md-12"><!--start of the first row body-->
-        <div class="allif-form-container">
-        <form method='POST' action=''>{% csrf_token %}
-        <div class="row"><!--start of row div --->
-            <div class="col-md-4"><!--start of column 1-->
-                <div class="card shadow text-left p-3 allif-form-card" >
-                <label>Division Name</label> {{form.division}}
-                <label>Branch Name</label> {{form.branch}}
-                <label>Department Name</label> {{form.department}}
-                <label>Full Name</label> {{form.name}}
-                <label>Gender</label>{{form.gender}}
-                <label>Phone</label>{{form.phone}}
-                <label>Email</label> {{form.email}}
-                
-                </div>
-            </div><!--end of column 1-->
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+
+      <tr>
+        <td class="allif-fix-table-col">Division</td>
+        <td>{{form.division}}</td>
+    
+        </tr>
         
-            <div class="col-md-4"><!--start of column 2-->
-            <div class="card shadow text-left p-3 allif-form-card">
-              <label>Address</label>{{form.address}}
-                
-
-                <label>City</label>{{form.city}}
-                
-              <label>Country</label>{{form.country}}
-              <label>Comments</label>{{form.comments}}
-              {% if sector == 'Education' %}
-                <label>Class</label>{{form.className}}
+        <tr>
+          <td class="allif-fix-table-col">Branch</td>
+          <td>{{form.branch}}</td>
+      
+          </tr>
+          <tr>
+            <td class="allif-fix-table-col">Department</td>
+            <td>{{form.department}}</td>
+        
+            </tr>
+            <tr>
+              <td class="allif-fix-table-col">Name</td>
+              <td>{{form.name}}</td>
+          
+              </tr>
+           
+              <tr>
+                <td class="allif-fix-table-col">Phone</td>
+                <td>{{form.phone}}</td>
+            
+                </tr>
                
-                <label>Form</label>{{form.form}}
-                {% elif sector == 'Healthcare' %}
-                <label>Age</label>{{form.age}}
-                {% else %}
-                <p></p>
-                {% endif %}
-
-                <label>Sales</label>{{form.sales}}
-                <label>Balance</label>{{form.balance}}
-               
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td class="allif-fix-table-col">Address</td>
+            <td>{{form.address}}</td>
+        
+            </tr>
+           
+              <tr>
+                <td class="allif-fix-table-col">Balance</td>
+                <td>{{form.balance}}</td>
+            
+                </tr>
+                <tr>
+                  <td class="allif-fix-table-col">Email</td>
+                  <td>{{form.email}}</td>
               
-                </div>
-            </div><!--end of column 2-->
-            <div class="col-md-4"><!--start of column 3-->
-            <div class="card shadow text-left p-3 allif-form-card">
+                  </tr>
+                  <tr>
+                    <td class="allif-fix-table-col">City</td>
+                    <td>{{form.city}}</td>
                 
-              <label>Turnover</label>{{form.turnover}}
-              <label>Payment</label>{{form.paymentType}}
-              <label>Next Kin</label>{{form.nextkin}}
-              <label>Relationship</label>{{form.relationship}}
-              <label>Contact</label>{{form.contact}}
-             
-                <br>
-                <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn">
-        
-                </div>
-            </div><!--end of column 1-->
-        
-        </div><!--end of row div --->
-            </form>
-            </div>
-            </div><!--end of first row body-->
+                    </tr>
+                    <tr>
+                      <td class="allif-fix-table-col">Country</td>
+                      <td>{{form.country}}</td>
+                  
+                      </tr>
+          </tbody>
+          </table>
+          </div>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+         
+            <tr>
+              <td class="allif-fix-table-col">Turnover</td>
+              <td>{{form.turnover}}</td>
+          
+              </tr>
+              <tr>
+                <td class="allif-fix-table-col">Contact</td>
+                <td>{{form.contact}}</td>
+            
+                </tr>
+
+
+    <tr>
+      <td class="allif-fix-table-col">Balance</td>
+      <td>{{form.balance}}</td>
+  
+              <tr>
+                <td class="allif-fix-table-col">Comments</td>
+                <td>{{form.comments}}</td>
+            
+                </tr>
+            <tr>
+              <td class="allif-fix-table-col">Action</td>
+              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
+          
+              </tr>
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
+
 </div><!--end....table row-->
-
+</div>
+</form>
 <!--end of table-->
-
 
 </div><!--end of main container of the page....-->
 
+
+
+
+</div>
+
+</div>
   {% block scripts %}
 
   {% endblock %}
