--- a/allifmaalcommonapp/templates/allifmaalcommonapp/education/classes/classes.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/education/classes/classes.html
@@ -6,7 +6,7 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-
+<div class="allifmaal-main-container">
 <!--start....main headere-->
 <div class="card-header">
 
@@ -37,6 +37,7 @@
       </div>
       </ul>
     </div>
+    <a class="amel-table-list-identifier">Classes:</a>
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
 
     <a href="{% url 'allifmaalcommonapp:commonForms' user_var glblslug %}">Forms</a>
@@ -72,64 +73,39 @@
 
 
   <div class="col-md-12"> <!--start....table column-->
-  
-    <div class="allif-scroll-table"> 
-      <div class="table-content-description">{{title}}</div>
-    <table class="table table-layout">
-    <thead>
-      <tr class="allif-table-header-row" >
+
+    <div class="allif-scroll-table">
       
-      <td>Class</td>
-      <td>Size</td>
-      <td>Created By</td>
-      <td>Form/Faculty</td>
-      <td>Department</td>
-      <td>Date</td>
+      <div class="table-responsive allif-full-table">
+      <table class="table table-layout">
+        <thead>
+          <tr class="allif-table-header-row">
+          <td class="allif-fix-table-col">Class</td>
+        
+          <td>Size</td>
+          <td>Created By</td>
+          <td>Form/Faculty</td>
+          <td>Department</td>
+          <td>Date</td>
       
-      </tr>
-      </thead>
-      <tbody class="allif-table-body">
        
-           
-      {% for item in allifqueryset %}   
-      <tr>
-   
-  <td>
-    <a href="{% url 'allifmaalcommonapp:commonClassDetails' item.id user_var glblslug %}" class="allif-table-links">
-  {{item.name}}
-  </a>
-  </td>
-  
-  <td>
-    {{item.size}}
-   </td>
- <td>
-  {{item.owner}}
- </td>
- <td>
-  {{item.form}}
- </td>
- <td>
-  {{item.department}}
- </td>
- <td>
-  {{item.date|date:'d/m/Y'}}
- </td>
-  </tr>
-        {% endfor %}
-        {% if searched_data %}
-        {% for item in searched_data %}   
-        <tr>
-   
-          <td>
-            <a href="{% url 'allifmaalcommonapp:commonClassDetails' item.id user_var glblslug %}" class="allif-table-links">
-          {{item.name}}
-          </a>
-          </td>
+          <td>Navigate</td>
           
-          <td>
-            {{item.size}}
-           </td>
+          <td> . . . </td>
+          <td></td>
+          </tr>
+          </thead>
+          <tbody class="allif-table-body">
+           
+          
+          {% for item in allifqueryset %} 
+          <tr data-id="{{item.id}}">
+          <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonClassDetails' item.id user_var glblslug %}">{{item.name}}</a></td>
+         
+           
+         <td>
+          {{item.size}}
+         </td>
          <td>
           {{item.owner}}
          </td>
@@ -142,14 +118,82 @@
          <td>
           {{item.date|date:'d/m/Y'}}
          </td>
-          </tr>
-          {% endfor %}
-          {% endif %}
-      </tbody>
-        </table>
+        
+           <td>
+            <div class="dropdown allifmaal-content-dropdown">
+              <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
+              <div class="dropdown-content">
+                <a href="{% url 'allifmaalcommonapp:commonEditClass' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+                <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
+                
+              </div>
+            </div>
+            <div class="dropdown allif-confirm-action">
+              
+              <a href="{% url 'allifmaalcommonapp:commonClasses' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
+              <a href="{% url 'allifmaalcommonapp:commonDeleteClass' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+            </div>
+  
+           
+          </td>
+         <td> . . . </td>
+         <td></td>
+        
     
-      </div>
+      </tr>
+      {% endfor %}
+      {% if searched_data %}
+      {% for item in searched_data %}
+      <tr data-id="{{item.id}}">
+        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonClassDetails' item.id user_var glblslug %}">{{item.name}}</a></td>
+       
+         
+       <td>
+        {{item.size}}
+       </td>
+       <td>
+        {{item.owner}}
+       </td>
+       <td>
+        {{item.form}}
+       </td>
+       <td>
+        {{item.department}}
+       </td>
+       <td>
+        {{item.date|date:'d/m/Y'}}
+       </td>
       
+         <td>
+          <div class="dropdown allifmaal-content-dropdown">
+            <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
+            <div class="dropdown-content">
+              <a href="{% url 'allifmaalcommonapp:commonEditClass' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+              <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
+              
+            </div>
+          </div>
+          <div class="dropdown allif-confirm-action">
+            
+            <a href="{% url 'allifmaalcommonapp:commonClasses' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
+            <a href="{% url 'allifmaalcommonapp:commonDeleteClass' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+          </div>
+
+         
+        </td>
+       <td> . . . </td>
+       <td></td>
+      
+  
+    </tr>
+      {% endfor %}
+        {%endif %}
+  
+        </tbody>
+      </table>
+      </div>
+     </div>
+
       </div><!--end....table column-->
   </div>
 
