--- a/allifmaalcommonapp/templates/allifmaalcommonapp/expenses/add-expense.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/expenses/add-expense.html
@@ -6,81 +6,168 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-
-<div class="allifmaincontainer">
-
+<div class="allifmaal-main-container">
+ 
 <!--start....main headere-->
 <div class="card-header">
 
-  <div class="row mt-12" ><!--start....header row-->
-  
-  <div class="col-md-12"><!--start....header column-->
-  
-  <div class="container-fluid amel-content-header">
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+<div class="row mt-12" ><!--start....header row-->
 
-    <a href="{% url 'allifmaalcommonapp:commonExpenses' user_var glblslug %}">Expenses</a>
-    <a href="{% url 'allifmaalcommonapp:commonAddExpense' user_var glblslug %}">Add New</a>
+<div class="col-md-12"><!--start....header column-->
 
-  <a href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a>
-  </div>
+<div class="container-fluid amel-content-header">
+
+  <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+  <a href="{% url 'allifmaalcommonapp:commonExpenses' user_var glblslug %}">Expenses</a>
+ 
+</div>
+
+    </div><!--end....header column-->
   
-      </div><!--end....header column-->
+  </div><!--end....header row-->
+
+</div><!--end....main headere-->
+
+
+  <div class="allifmaincontainer">
+
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">Add/Edit New Expense</div>
+  <form method='POST' action=''>{% csrf_token %}
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
     
-    </div><!--end....header row-->
-  
-  </div><!--end....main headere-->
-  <div class="row mt-12"> <!--start....table row-->
-    <div class="col-md-12"><!--start of the first row body-->
-        <div class="allif-form-container">
-        <form method='POST' action=''>{% csrf_token %}
-        <div class="row"><!--start of row div --->
-          <div class="col-md-4"><!--start of column 1-->
-            <div class="card shadow text-left p-3 allif-form-card" >
-            <label>Division Name</label> {{form.division}}
-            <label>Branch Name</label> {{form.branch}}
-            <label>Department Name</label> {{form.department}}
-            
-            <label>Funding Account</label> {{form.funding_account}}
-            <label>Expense Account</label> {{form.expense_account}}
-            <label>Equity Account</label> {{form.equity_account}}
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+      
+      <tr>
+        <td class="allif-fix-table-col">Division</td>
+        <td>{{form.division}}</td>
+    
+        </tr>
+        
+        <tr>
+          <td class="allif-fix-table-col">Branch</td>
+          <td>{{form.branch}}</td>
+      
+          </tr>
+          <tr>
+            <td class="allif-fix-table-col">Department</td>
+            <td>{{form.department}}</td>
+        
+            </tr>
+          <tr>
+            <td class="allif-fix-table-col">Funding A/C</td>
+            <td>{{form.funding_account}}</td>
+        
+            </tr>
+            <tr>
+              <td class="allif-fix-table-col">Expense A/C</td>
+              <td>{{form.expense_account}}</td>
+          
+              </tr>
+             
+          
+        </tbody>
+        </table>
+      </div>
+        </div>
            
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td class="allif-fix-table-col">Equity A/C</td>
+            <td>{{form.equity_account}}</td>
+        
+            </tr>
+            <tr>
+              <td class="allif-fix-table-col">Supplier</td>
+              <td>{{form.supplier}}</td>
+          
+              </tr>
+         
+                  <tr>
+                    <td class="allif-fix-table-col">Description</td>
+                    <td>{{form.description}}</td>
+                
+                    </tr>
+                    <tr>
+                      <td class="allif-fix-table-col">Quantity</td>
+                      <td>{{form.quantity}}</td>
+                  
+                      </tr>
+                     
+                      <tr>
+                        <td class="allif-fix-table-col">Amount</td>
+                        <td>{{form.amount}}</td>
+                    
+                        </tr>   
+          </tbody>
+          </table>
           </div>
-            </div><!--end of column 1-->
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
         
-            <div class="col-md-4"><!--start of column 2-->
-            <div class="card shadow text-left p-3 allif-form-card">
-              <label>Supplier</label> {{form.supplier}}
-              <label>Description</label> {{form.description}}
-              <label>Quantity</label> {{form.quantity}}
-              <label>Amount</label> {{form.amount}}
-              
-        
-                </div>
-            </div><!--end of column 2-->
-            <div class="col-md-4"><!--start of column 3-->
-            <div class="card shadow text-left p-3 allif-form-card">
-              <label>Terms</label> {{form.mode}}
-              <label>Comments </label> {{form.comments}}
-                <label>Status</label> {{form.status}}
-               
-                <hr>
-                <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn">
-        
-                </div>
-            </div><!--end of column 1-->
-        
-        </div><!--end of row div --->
-            </form>
-            </div>
-            </div><!--end of first row body-->
+            <tr>
+              <td class="allif-fix-table-col">Terms</td>
+              <td>{{form.mode}}</td>
+          
+              </tr>
+              <tr>
+                <td class="allif-fix-table-col">Status</td>
+                <td>{{form.status}}</td>
+            
+                </tr>
+          
+              <tr>
+                <td class="allif-fix-table-col">Comments</td>
+                <td>{{form.comments}}</td>
+            
+                </tr>
+            <tr>
+              <td class="allif-fix-table-col">Action</td>
+              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
+          
+              </tr>
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
+
 </div><!--end....table row-->
-
+</div>
+</form>
 <!--end of table-->
-
 
 </div><!--end of main container of the page....-->
 
+
+
+
+</div>
+
+</div>
   {% block scripts %}
 
   {% endblock %}
