--- a/allifmaalcommonapp/templates/allifmaalcommonapp/expenses/expense-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/expenses/expense-details.html
@@ -6,186 +6,185 @@
 {% block style %}
 {%endblock%}
 {% block body %}
+<div class="allifmaal-main-container">
+
 <!--start....main headere-->
 <div class="card-header">
 
-  <div class="row mt-12" ><!--start....header row-->
-  
-  <div class="col-md-12"><!--start....header column-->
-  
-  <div class="container-fluid amel-content-header">
-    <div class="dropdown allifmaal-content-dropdown">
-      <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Actions
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <div class="content-dropdown-menu">
-           
-          <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditExpense' allifquery.id user_var glblslug %}">Edit Item</a></li>
-          <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonPostExpense' allifquery.id user_var glblslug %}">Post Item</a></li>
-          
+<div class="row mt-12" ><!--start....header row-->
+
+<div class="col-md-12"><!--start....header column-->
+
+<div class="container-fluid amel-content-header">
+<div class="dropdown allifmaal-content-dropdown">
+  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+  Actions
+  </a>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    <div class="content-dropdown-menu">
          
-          <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteExpense' allifquery.id user_var glblslug %}">Delete Item</a></li>
+      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditExpense' allifquery.id user_var glblslug %}">Edit Item</a></li>
+      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonPostExpense' allifquery.id user_var glblslug %}">Post Item</a></li>
       
-       </div>
-      </ul>
-    </div>
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
- 
-  <a href="{% url 'allifmaalcommonapp:commonExpenses' user_var glblslug %}">Expenses</a>
+     
+      <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteExpense' allifquery.id user_var glblslug %}">Delete Item</a></li>
   
-  <a href="{% url 'allifmaalcommonapp:commonAddExpense' user_var glblslug %}">Add New</a>
-  </div>
-  
-      </div><!--end....header column-->
-    
-    </div><!--end....header row-->
-  
-  </div><!--end....main headere-->
+   </div>
+  </ul>
+</div>
+<a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
 
-<div class="allifmaincontainer">
-  <div class="row mt-12"> <!--start....table row-->
-    <div class="allif-details-container">
+<a href="{% url 'allifmaalcommonapp:commonExpenses' user_var glblslug %}">Expenses</a>
+
+
+</div>
+
+    </div><!--end....header column-->
+  
+  </div><!--end....header row-->
+
+</div><!--end....main headere-->
+
+  <div class="allifmaincontainer">
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">{{allifquery}} Details</div>
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
       <div class="row"><!--start of row div --->
-      
-        <!--start of column two-->
-        <div class="col-md-4">
-          <div class="allif-details-card ">
-            <!--start of the table here-->
-          <table class="table allif-details-table table-layout">
-            <tbody>
-              <tr>
-                <td>Company</td>
-                <td>{{allifquery.company}}</td>
-            
-                </tr>
-              <tr>
-                <td>Division</td>
-                <td>{{allifquery.division}}</td>
-            
-                </tr>
-                <tr>
-                  <td>Branch</td>
-                  <td>{{allifquery.branch}}</td>
-              
-                  </tr>
-             
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+        <tr>
+          <td class="allif-fix-table-col">Company</td>
+          <td>{{allifquery.company}}</td>
+          </tr>
+      <tr>
+        <td class="allif-fix-table-col">Division</td>
+        <td>{{allifquery.division}}</td>
+        </tr>
+      <tr>
+        <td class="allif-fix-table-col">Branch</td>
+        <td>{{allifquery.branch}}</td>
+        </tr>
+     
+        <tr>
+          <td class="allif-fix-table-col">Funding A/C</td>
+          <td>{{allifquery.funding_account}}</td>
+          </tr>
+
           <tr>
-            <td>Description</td>
-            <td>{{allifquery.description}}</td>
-        
+            <td class="allif-fix-table-col">Expense A/C</td>
+            <td>{{allifquery.expense_account}}</td>
             </tr>
-        
-
-            
-           
-          </tbody>
-          </table>
-        
-          </div>
-              </div>
-      
-           
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="allif-details-card ">
-          <!--start of the table here-->
-        <table class="table table-layout allif-details-table">
-          <tbody>
-       
             <tr>
-              <td>Owner</td>
-              <td>{{allifquery.owner}}</td>
-          
+              <td class="allif-fix-table-col">Department</td>
+              <td>{{allifquery.department}}</td>
               </tr>
-              <tr>
-                <td>Funding Account</td>
-                <td>{{allifquery.funding_account}}</td>
-            
-                </tr>
-
-                <tr>
-                  <td>Expense Account</td>
-                  <td>{{allifquery.expense_account}}</td>
-              
-                  </tr>
-                  <tr>
-                    <td>Supplier</td>
-                    <td>{{allifquery.supplier}}</td>
-                
-                    </tr>
-                   
-        
         </tbody>
         </table>
-      
+      </div>
         </div>
-            </div>
-      
-      
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="allif-details-card ">
-          <!--start of the table here-->
-        <table class="table table-layout allif-details-table">
-          <tbody>
-            <tr>
-              <td>Mode</td>
-              <td>{{allifquery.mode}}</td>
-          
-              </tr>
-             
-                <tr>
-                  <td>Quantity</td>
-                  <td>{{allifquery.quantity}}</td>
-              
-                  </tr>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
 
+        
+            <tr>
+              <td class="allif-fix-table-col">Equity A/C</td>
+              <td>{{allifquery.equity_account}}</td>
+              </tr>
+              <tr>
+                <td class="allif-fix-table-col">Supplier</td>
+                <td>{{allifquery.supplier}}</td>
+                </tr>
+                <tr>
+                  <td class="allif-fix-table-col">Terms</td>
+                  <td>{{allifquery.mode}}</td>
+                  </tr>
                   <tr>
-                    <td>Amount</td>
-                    <td>{{allifquery.amount}}</td>
-                
+                    <td class="allif-fix-table-col">Equity A/C</td>
+                    <td>{{allifquery.equity_account}}</td>
                     </tr>
                     <tr>
-                      <td>Status</td>
-                      <td>{{allifquery.status}}</td>
-                  
+                      <td class="allif-fix-table-col">Equity A/C</td>
+                      <td>{{allifquery.equity_account}}</td>
                       </tr>
+          
                       <tr>
-                        <td>Comments</td>
-                        <td>{{allifquery.comments}}</td>
-                    
+                        <td class="allif-fix-table-col">Amount</td>
+                        <td>{{allifquery.amount|floatformat:2|intcomma}}</td>
                         </tr>
-
-    <tr>
-    <td>Created On</td>
-    <td>{{allifquery.date|date:'d/m/Y'}}</td>
-
-    </tr>
-               
-     
-        </tbody>
-        </table>
-      
-      </div>
-    </div>
-      
-      </div><!--end of row div --->
-        
+       
+          </tbody>
+          </table>
           </div>
-          <hr>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+        
+              <tr>
+                <td class="allif-fix-table-col">Status</td>
+                <td>{{allifquery.status}}</td>
+                </tr>
+
+<tr>
+  <td class="allif-fix-table-col">Description</td>
+  <td>{{allifquery.description}}</td>
+  </tr>
+<tr>
+  <td class="allif-fix-table-col">Created By</td>
+  <td>{{allifquery.owner}}</td>
+  </tr>
+
+          <tr>
+            <td class="allif-fix-table-col">Date</td>
+            <td>{{allifquery.date|date:'d/m/Y'}}</td>
+            </tr>
+          
+            <tr>
+              <td class="allif-fix-table-col">Comments</td>
+              <td>{{allifquery.comments}}</td>
+          
+          </tr> 
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
 
 </div><!--end....table row-->
+</div>
+<!--end of table-->
 
 </div><!--end of main container of the page....-->
 
+<hr>
+
+</div>
+</div>
   {% block scripts %}
 
   {% endblock %}
    {% endblock %}
    
-
-
 
 
 
