--- a/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/add-cat.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/add-cat.html
@@ -6,85 +6,127 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-
-<div class="allifmaincontainer">
-
+<div class="allifmaal-main-container">
+ 
 <!--start....main headere-->
 <div class="card-header">
 
-  <div class="row mt-12" ><!--start....header row-->
-  
-  <div class="col-md-12"><!--start....header column-->
-  
-  <div class="container-fluid amel-content-header">
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+<div class="row mt-12" ><!--start....header row-->
 
-    <a href="{% url 'allifmaalcommonapp:commonForms' user_var glblslug %}">Forms</a>
-    <a href="{% url 'allifmaalcommonapp:commonAddForm' user_var glblslug %}">Add New</a>
+<div class="col-md-12"><!--start....header column-->
 
+<div class="container-fluid amel-content-header">
 
-  <div class="dropdown allifmaal-content-dropdown">
-    <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-    Modules
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <div class="content-dropdown-menu">
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}" >Employees</a></li>
-     
-    </div>
-    </ul>
-  </div>
-  <a href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a>
-  </div>
+  <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+  <a href="{% url 'allifmaalcommonapp:commonStockCats' user_var glblslug %}">Stock Categories</a>
+ 
+</div>
+
+    </div><!--end....header column-->
   
-      </div><!--end....header column-->
+  </div><!--end....header row-->
+
+</div><!--end....main headere-->
+
+
+  <div class="allifmaincontainer">
+
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">Add/Edit New Stock Category</div>
+  <form method='POST' action=''>{% csrf_token %}
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
     
-    </div><!--end....header row-->
-  
-  </div><!--end....main headere-->
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
 
-
-  <div class="row mt-12"> <!--start....table row-->
-    <div class="col-md-12"><!--start of the first row body-->
-        <div class="allif-form-container">
-        <form method='POST' action=''>{% csrf_token %}
-        <div class="row"><!--start of row div --->
-          <div class="col-md-4"><!--start of column 1-->
-            <div class="card shadow text-left p-3 allif-form-card" >
-              <label>Division Name</label> {{form.division}}
-              <label>Branch Name</label> {{form.branch}}
+      <tr>
+        <td class="allif-fix-table-col">Division</td>
+        <td>{{form.division}}</td>
+    
+        </tr>
         
-          </div>
-            </div><!--end of column 1-->
+        <tr>
+          <td class="allif-fix-table-col">Branch</td>
+          <td>{{form.branch}}</td>
+      
+          </tr>
         
-            <div class="col-md-4"><!--start of column 2-->
-            <div class="card shadow text-left p-3 allif-form-card">
-              <label>Department Name</label> {{form.department}}
+          
+        </tbody>
+        </table>
+      </div>
+        </div>
            
-              <label>Description</label> {{form.description}}
-                </div>
-            </div><!--end of column 2-->
-            <div class="col-md-4"><!--start of column 3-->
-            <div class="card shadow text-left p-3 allif-form-card">
-              <label>Comments</label> {{form.comments}}
-              <br>
-                <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn">
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td class="allif-fix-table-col">Department</td>
+            <td>{{form.department}}</td>
         
-                </div>
-            </div><!--end of column 1-->
+            </tr>
+          <tr>
+            <td class="allif-fix-table-col">Description</td>
+            <td>{{form.description}}</td>
         
-        </div><!--end of row div --->
-            </form>
-            </div>
-            </div><!--end of first row body-->
+            </tr>
+         
+          </tbody>
+          </table>
+          </div>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+         
+          
+              <tr>
+                <td class="allif-fix-table-col">Comments</td>
+                <td>{{form.comments}}</td>
+            
+                </tr>
+            <tr>
+              <td class="allif-fix-table-col">Action</td>
+              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
+          
+              </tr>
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
+
 </div><!--end....table row-->
-
+</div>
+</form>
 <!--end of table-->
-
 
 </div><!--end of main container of the page....-->
 
+
+
+
+</div>
+
+</div>
   {% block scripts %}
 
   {% endblock %}
