--- a/allifmaalcommonapp/templates/allifmaalcommonapp/suppliers/supplier-ledger-entries.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/suppliers/supplier-ledger-entries.html
@@ -6,9 +6,10 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-
+<div class="allifmaal-main-container">
 <!--start....main headere-->
 <div class="card-header">
+
   <div class="row mt-12" ><!--start....header row-->
   
   <div class="col-md-12"><!--start....header column-->
@@ -17,31 +18,84 @@
     <div class="dropdown allifmaal-content-dropdown">
       <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
       Open Filters
-      </a>  
+      </a>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
         <div class="content-dropdown-menu">
   
         <li><a class="dropdown-item">Looking for something?</a></li>
-        <a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSupplierPayments' user_var glblslug %}">Clear Search</a>
-          
-        <form method='POST' action="{% url 'allifmaalcommonapp:commonSupplierPaymentSearch' user_var glblslug %}">{% csrf_token %}
+        <a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonClearSupplierSearch' user_var glblslug %}">Clear Search</a>
+        
+        <form method='POST' action="{% url 'allifmaalcommonapp:commonSupplierSearch' user_var glblslug %}">{% csrf_token %}
         
           <input type="text" id="allifsearchcommonfield" name="allifsearchcommonfieldname" class="form-control allifsearchcommonfieldclasstwo"
           placeholder="Type Here ...">
         
           <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
           </form>
-     
+          <hr>
+          <li><a class="dropdown-item">Select Ordering Option</a></li>
+        <form method='POST' action="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" enctype="multipart/form-data">{% csrf_token %}
+      
+        <div>
+        <select name="requiredformat" class="form-control">
+          {% for item in datasorts %}
+          <option>{{item.name}}</option>
+            
+           {% endfor %}
+           
+          </select>
+          </div>
+          <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
+      
+      </form>
+      <hr>
+      <li><a class="dropdown-item">Advanced Searching</a></li>
+      <form method='POST' action="{% url 'allifmaalcommonapp:commonSupplierAdvanceSearch' user_var glblslug %}" enctype="multipart/form-data">{% csrf_token %}
+        
+        <div>
+          <label>Start Date</label>
+          <input type="date" class="form-control" name="startdate" placeholder="Starting Balance">
+        </div>
+        <div>
+          <label>End Date</label>
+          <input type="date" class="form-control" name="enddate" placeholder="Ending Balance">
+        </div>
+
+        <div>
+          <label>Start Value</label>
+          <input type="text" class="form-control" name="startvalue" placeholder="">
+        </div>
+        <div>
+          <label>End Value</label>
+          <input type="text" class="form-control" name="endvalue" placeholder="">
+        </div>
+        
+        
+        <div>
+          <label >Select Option</label>
+          <select name="requiredformat" class="form-control">
+            {% for item in formats %}
+            <option>{{item.name}}</option>
+            
+         {% endfor %}
+         
+        </select>
+        </div>
+  
+        
+        <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
+    
+    </form>
+    <hr>
+      
       </div>
       </ul>
     </div>
-    <a class="amel-table-list-identifier">Supplier Payments:</a>
+    <a class="amel-table-list-identifier">Suppliers:</a>
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-    <a href="{% url 'allifmaalcommonapp:commonSupplierStatementpdf' allifquery.id user_var glblslug %}">Pdf</a>
-    <a href="{% url 'allifmaalcommonapp:commonPostedSupplierPayments' user_var glblslug %}">Posted Supplier Payments</a>
-    <a href="{% url 'allifmaalcommonapp:commonSupplierStatements' user_var glblslug %}">Supplier Statements</a>
-    <a href="{% url 'allifmaalcommonapp:commonPaySupplierDirect' user_var glblslug %}">New Supplier Payment</a>
-
+    <a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}">Suppliers</a>
+    <a href="{% url 'allifmaalcommonapp:commonAddSupplier' user_var glblslug %}">New Supplier</a>
+ 
   <div class="dropdown allifmaal-content-dropdown">
     <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
     Modules
@@ -49,8 +103,8 @@
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
       <div class="content-dropdown-menu">
       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonCustomers' user_var glblslug %}">Customers</a></li>
-      
+      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}" >Employees</a></li>
+     
     </div>
     </ul>
   </div>
@@ -62,104 +116,148 @@
     </div><!--end....header row-->
   
   </div><!--end....main headere-->
-<div class="allifmaincontainer">
-    
-<div class="row mt-12"> <!--start....table row-->
-<div class="col-md-12"> <!--start....table column-->
-  
-<div class="allif-scroll-table">
-<table class="table table-layout">
-<thead>
-  <tr class="allif-table-header-row" >
-    <td>Posting Date</td>
-    <td>Document Date</td>
-    <td>Document Type</td>
-    
-    <td>Description</td>
-    <td>Supplier</td>
-    <td>Original Amount</td>
-    <td>Amount</td>
 
-    <td>Debit</td>
-    <td>Credit</td>
-    <td>Balance</td>
-    <td>Transaction</td>
-    <td>Date</td>
+<div class="allifmaincontainer">  
+<div class="row mt-12"> <!--start....table row-->
+
+  <div class="col-md-12"> <!--start....table column-->
+
+    <div class="allif-scroll-table">
+      <div class="table-responsive allif-full-table">
+      <table class="table table-layout">
+        <thead>
+          <tr class="allif-table-header-row">
+          <td class="allif-fix-table-col">Posting Date</td>
+         
+          <td>Document Date</td>
+          <td>Document Type</td>
+          
+          <td>Description</td>
+          <td>Supplier</td>
+          <td>Original Amount</td>
+          <td>Amount</td>
+      
+          <td>Debit</td>
+          <td>Credit</td>
+          <td>Balance</td>
+          <td>Transaction</td>
+          <td>Date</td>
+          <td>Navigate</td>
+          
+          <td> . . . </td>
+          <td></td>
+          </tr>
+          </thead>
+          <tbody class="allif-table-body">
+           
+          
+          {% for item in allifqueryset %} 
+          <tr data-id="{{item.id}}">
+          <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonSupplierDetails' item.id user_var glblslug %}">{{item.name}}</a></td>
+          <td>
+            {{item.description}}
+          </td>
+          
+          <td>
+            {{item.credit}}
+          </td>
+          <td>
+            {{item.debit}}
+          </td>
+          <td>
+            {{item.credit}}
+          </td>
+        <td>
+        <a href="{% url 'allifmaalcommonapp:commonSupplierStatementDetails' item.id user_var glblslug %}" class="allif-table-links">
+        {{item.balance|floatformat:2|intcomma}}
+        </a></td>
+        
+          <td>
+          {{item.comments}}
+        </td>
+       
+       
+        <td>
+          {{item.date|date:'d/m/Y'}}
+        </td>
+          
+           <td>
+            {{item.turnover|floatformat:2|intcomma}}
+           </td>
+           
+        
+           <td>
+            <div class="dropdown allifmaal-content-dropdown">
+              <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
+              <div class="dropdown-content">
+                <a href="{% url 'allifmaalcommonapp:commonEditSupplier' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+                <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
+                
+              </div>
+            </div>
+            <div class="dropdown allif-confirm-action">
+              
+              <a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
+              <a href="{% url 'allifmaalcommonapp:commonDeleteSupplier' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+            </div>
   
-  </tr>
-  </thead>
-  <tbody class="allif-table-body">
-   
-  
-  {% for item in allifqueryset %}   
-  <tr>
-    <td>
-      {{item.description}}
-    </td>
+           
+          </td>
+         <td> . . . </td>
+         <td></td>
+        
     
-    <td>
-      {{item.credit}}
-    </td>
-    <td>
-      {{item.debit}}
-    </td>
-    <td>
-      {{item.credit}}
-    </td>
-  <td>
-  <a href="{% url 'allifmaalcommonapp:commonSupplierStatementDetails' item.id user_var glblslug %}" class="allif-table-links">
-  {{item.balance|floatformat:2|intcomma}}
-  </a></td>
-  
-    <td>
-    {{item.comments}}
-  </td>
- 
- 
-  <td>
-    {{item.date|date:'d/m/Y'}}
-  </td>
-    
+      </tr>
+      {% endfor %}
+      {% if searched_data %}
+      {% for item in searched_data %}
+      <tr data-id="{{item.id}}">
+        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonSupplierDetails' item.id user_var glblslug %}">{{item.name}}</a></td>
+       
+          <td>
+          {{item.address}}
+         </td>
+        
+         <td>
+          {{item.balance|floatformat:2|intcomma}}
+         </td>
+         <td>
+          {{item.turnover|floatformat:2|intcomma}}
+         </td>
+         
+      
+         <td>
+          <div class="dropdown allifmaal-content-dropdown">
+            <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
+            <div class="dropdown-content">
+              <a href="{% url 'allifmaalcommonapp:commonEditSupplier' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+              <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
+              
+            </div>
+          </div>
+          <div class="dropdown allif-confirm-action">
+            
+            <a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
+            <a href="{% url 'allifmaalcommonapp:commonDeleteSupplier' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+          </div>
+
+         
+        </td>
+       <td> . . . </td>
+       <td></td>
+      
   
     </tr>
       {% endfor %}
-      
-      {% if searched_data %}
-      {% for item in searched_data %}   
-      <tr>
-      
-        <td>
-          {{item.description}}
-        </td>
-        <td>
-          {{item.supplier}}
-        </td>
-      <td>
-      <a href="{% url 'allifmaalcommonapp:commonSupplierPaymentDetails' item.id user_var glblslug %}" class="allif-table-links">
-      {{item.amount|floatformat:2|intcomma}}
-      </a></td>
-      
-        <td>
-        {{item.department}}
-      </td>
-     
-      <td>
-        {{item.owner}}
-      </td>
-      <td>
-        {{item.date|date:'d/m/Y'}}
-      </td>
-        
-        </tr>
-        {% endfor %}
-        {% endif %}
-
-  </tbody>
-    </table>
-
-  </div>
+        {%endif %}
   
-  </div><!--end....table column-->
+        </tbody>
+      </table>
+      </div>
+     </div>
+
+     
+      </div><!--end....table column-->
   </div>
 
 </div><!--end....table row-->
@@ -169,7 +267,7 @@
 </div><!--end of main container of the page....-->
 
   {% block scripts %}
- 
+  <!--when you put the js code here, it gives a repetitive results....-->
   {% endblock %}
   
    {% endblock %}
